# rustmatrix

./: Cargo.toml  README.md  wishlist.md
src/: alphabet.rs  color.rs  config.rs  event.rs  main.rs  view.rs
