[package]
name = "termatrix"
description = "The Matrix scrolling in your terminal"
version = "2.0.0"
authors = ["Joel Edwards <joeledwards@gmail.com>"]
edition = "2021"
keywords = ["cli", "matrix", "terminal"]
categories = ["command-line-utilities"]
repository = "https://github.com/joeledwards/termatrix/"
readme = "README.md"
website = "https://github.com/joeledwards/termatrix/"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.14", features = ["derive", "env"] }
cursive = "0.18.0"
rand = "0.8.5"
termion = "1.5.6"
